--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "node-sass": "^5.0.0",
+    "axios": "^0.21.0",
+    "es5-shim": "^4.5.14",
+    "node-sass": "4.14.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
     "sass": "^1.29.0",
+    "sass-loader": "10.0.5",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -47,7 +50,6 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "plop": "^2.7.4",
-    "prettier": "^2.1.2",
     "react-test-renderer": "^17.0.1"
   }
 }
